kubernetes/aks/apps/demo/otel/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 205.194.32.0/24
    external-dns.alpha.kubernetes.io/target: inspection.alpha.canada.ca
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - otel.inspection.alpha.canada.ca
      secretName: aciacfia-tls
  rules:
    - host: otel.inspection.alpha.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-demo-frontendproxy
                port:
                  number: 8080
